--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8" />
-    <title class = "title">WallHack</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <title>WallHack</title>
+    <link rel="stylesheet" type="text/css" href="css/index-style.css" />
 </head>
+<body>
+	
+</body>
