--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     <link rel="stylesheet" type="text/css" href="css/index-style.css" />
 </head>
 <body>
-	
+	<div class="header">WallHack</div>
 </body>
