--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/index-style.css" />
 </head>
 <body>
-	<div class="header">WallHack</div>
+	<header class="header">WallHack</header>
+	<div class="text">BlaBLa</div>
+	<footer class="footer">credits</footer>
 </body>
