début design page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
 	<meta charset="UTF-8" />
-    <title>WallHack</title>
-    <link rel="stylesheet" type="text/css" href="css/index-style.css" />
+	<title>WallHack</title>
+	<link rel="stylesheet" type="text/css" href="css/index-style.css" />
 </head>
+
 <body>
+
 	<header class="header">WallHack</header>
-	<div class="text">BlaBLa</div>
-	<footer class="footer">credits</footer>
+	<div class="text">BlaBLaBlaBla</div>
+
+	<div id="particles-js"></div>
+	<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+	<script src="js/particles-js.js"></script>
+	<footer class="footer">
+		<p>Copyright © WallHack</p>
+	</footer>
 </body>
+
+</html>
