Background Accueil, Footer+Header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
 
 	<header class="header">WallHack</header>
-	<div class="text">BlaBLaBlaBla</div>
+	<div class="text">
+		<div class = "welcome">
+			<h1> Bienvenue sur WallHack, le site de documentation sur la cybersécurité !</h1>
+		</div>
+	</div>
 
 	<div id="particles-js"></div>
 	<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
