--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 <body>
 
 	<header class="header">WallHack</header>
+
+	<nav class="navbar">
+		<ul class="navbar-menu">
+			<li class="navbar-item"><a href="#">Accueil</a></li>
+			<li class="navbar-item"><a href="#">Documentation</a></li>
+			<li class="navbar-item"><a href="#">Credits</a></li>
+			<li class="navbar-item"><a href="#">Liste des commentaires</a></li>
+			<li class="navbar-item"><a href="#">Ajouter un commentaire</a></li>
+		</ul>
+	</nav>
+
 	<div class="text">
 		<div class = "welcome">
 			<h1> Bienvenue sur WallHack, le site de documentation sur la cybersécurité !</h1>
