--- a/accueil.html
+++ b/accueil.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>WallHack</title>
-	<link rel="stylesheet" type="text/css" href="css/index-style.css" />
+	<link rel="stylesheet" type="text/css" href="css/accueil-style.css" />
 </head>
 
 <body>
