--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style_index.css">
 </head>
 <body>
-	<a href="#">
+	<a href="accueil.html">
 		<span></span>
 		<span></span>
 		<span></span>
