--- a/accueil.html
+++ b/accueil.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<title>WallHack</title>
 	<link rel="stylesheet" type="text/css" href="css/accueil-style.css" />
+	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -13,11 +14,18 @@
 
 	<nav class="navbar">
 		<ul class="navbar-menu">
-			<li class="navbar-item"><a href="#">Accueil</a></li>
-			<li class="navbar-item"><a href="#">Documentation</a></li>
-			<li class="navbar-item"><a href="#">Credits</a></li>
-			<li class="navbar-item"><a href="#">Liste des commentaires</a></li>
-			<li class="navbar-item"><a href="#">Ajouter un commentaire</a></li>
+			<li class="navbar-item"><a href="#" class="navbar-link">
+				<i class="fas fa-home"></i>
+				<span class="navbar-title">Accueil</span>
+			</a></li>
+			<li class="navbar-item"><a href="#" class="navbar-link">
+				<i class="fas fa-folder"></i>
+				<span class="navbar-title">Documentation</span>
+			</a></li>
+			<li class="navbar-item"><a href="#" class="navbar-link">
+				<i class="fas fa-address-card"></i>
+				<span class="navbar-title">Credits</span>
+			</a></li>
 		</ul>
 	</nav>
 
