--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<title>Neon Effects</title>
 	<link rel="stylesheet" type="text/css" href="css/style_index.css">
+	<script src="js/transition.js"></script>
 </head>
 <body>
+	<div class="transition transition is-active"></div>
 	<a href="accueil.html">
 		<span></span>
 		<span></span>
