--- a/accueil.html
+++ b/accueil.html
@@ -6,26 +6,32 @@
 	<title>WallHack</title>
 	<link rel="stylesheet" type="text/css" href="css/accueil-style.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
+	<script src="js/transition.js"></script>
 </head>
 
 <body>
 
 	<header class="header">WallHack</header>
+	<div class="transition transition is-active"></div>
 
 	<nav class="navbar">
 		<ul class="navbar-menu">
-			<li class="navbar-item"><a href="#" class="navbar-link">
+
+			<li class="navbar-item">
 				<i class="fas fa-home"></i>
-				<span class="navbar-title">Accueil</span>
-			</a></li>
-			<li class="navbar-item"><a href="#" class="navbar-link">
+				<a href="#" class="navbar-link" class="transition transition is-active">Accueil</a>
+			</li>
+
+			<li class="navbar-item">
 				<i class="fas fa-folder"></i>
-				<span class="navbar-title">Documentation</span>
-			</a></li>
-			<li class="navbar-item"><a href="#" class="navbar-link">
+				<a href="index.html" class="navbar-link">Documentation</a>
+			</li>
+
+			<li class="navbar-item">
 				<i class="fas fa-address-card"></i>
-				<span class="navbar-title">Credits</span>
-			</a></li>
+				<a href="index.html" class="navbar-link">Credits</a>
+			</li>
+
 		</ul>
 	</nav>
 
@@ -42,6 +48,8 @@
 	<div id="particles-js"></div>
 	<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 	<script src="js/particles-js.js"></script>
+
+
 </body>
 
 </html>
