--- a/accueil.html
+++ b/accueil.html
@@ -12,23 +12,28 @@
 <body>
 
 	<header class="header">WallHack</header>
-	<div class="transition transition is-active"></div>
+	<div class="transition transition is-active fa-lg"></div>
 
 	<nav class="navbar">
 		<ul class="navbar-menu">
 
 			<li class="navbar-item">
-				<i class="fas fa-home"></i>
-				<a href="#" class="navbar-link" class="transition transition is-active">Accueil</a>
+				<a class="navbar-link navbar-title">Menu</a>
+				<i class="fas fa-chevron-right navbar-icon fa-2x"></i>
 			</li>
 
 			<li class="navbar-item">
-				<i class="fas fa-folder"></i>
+				<i class="fas fa-home fa-lg navbar-icon"></i>
+				<a href class="navbar-link">Accueil</a>
+			</li>
+
+			<li class="navbar-item ">
+				<i class="fas fa-folder fa-lg navbar-icon"></i>
 				<a href="index.html" class="navbar-link">Documentation</a>
 			</li>
 
-			<li class="navbar-item">
-				<i class="fas fa-address-card"></i>
+			<li class="navbar-item ">
+				<i class="fas fa-address-card fa-lg navbar-icon"></i>
 				<a href="index.html" class="navbar-link">Credits</a>
 			</li>
 
