--- a/accueil.html
+++ b/accueil.html
@@ -19,22 +19,27 @@
 
 			<li class="navbar-item">
 				<a class="navbar-link navbar-title">Menu</a>
-				<i class="fas fa-chevron-right navbar-icon fa-2x"></i>
+				<i class="fas fa-chevron-right navbar-icon fa-2x logo"></i>
 			</li>
 
 			<li class="navbar-item">
 				<i class="fas fa-home fa-lg navbar-icon"></i>
-				<a href class="navbar-link">Accueil</a>
+				<a href="accueil.html" class="navbar-link">Accueil</a>
 			</li>
 
 			<li class="navbar-item ">
 				<i class="fas fa-folder fa-lg navbar-icon"></i>
-				<a href="index.html" class="navbar-link">Documentation</a>
+				<a href="documentation.html" class="navbar-link">Documentation</a>
 			</li>
 
 			<li class="navbar-item ">
 				<i class="fas fa-address-card fa-lg navbar-icon"></i>
-				<a href="index.html" class="navbar-link">Credits</a>
+				<a href="credits.html" class="navbar-link">Credits</a>
+			</li>
+
+			<li class="navbar-item ">
+				<i class="fas fa-sign-out-alt fa-lg navbar-icon"></i>
+				<a href="index.html" class="navbar-link">Quitter</a>
 			</li>
 
 		</ul>
