--- a/accueil.html
+++ b/accueil.html
@@ -12,7 +12,7 @@
 <body>
 
 	<header class="header">WallHack</header>
-	<div class="transition transition is-active fa-lg"></div>
+	<div class="transition transition is-active"></div>
 
 	<nav class="navbar">
 		<ul class="navbar-menu">
