--- a/accueil.html
+++ b/accueil.html
@@ -19,7 +19,7 @@
 
 			<li class="navbar-item">
 				<a class="navbar-link navbar-title">Menu</a>
-				<i class="fas fa-chevron-right navbar-icon fa-2x logo"></i>
+				<i class="fas fa-chevron-right navbar-icon fa-lg logo"></i>
 			</li>
 
 			<li class="navbar-item">
