--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<title>Neon Effects</title>
+	<title>WallHack</title>
 	<link rel="stylesheet" type="text/css" href="css/style_index.css">
 	<script src="js/transition.js"></script>
 </head>
