--- a/Documentation.html
+++ b/Documentation.html
@@ -14,15 +14,16 @@
 				<div class = "content">
 					<h2>Carte 1</h2>
 					<p2>Mettre du texte ici vite fait</p2>
+				</br>
 					<a href="#">Lire plus</a>
 				</div>
 			</div>	
-		</div>
 		<div class = "box">
 			<span></span>
 			<div class = "content">
 				<h2>Carte 2</h2>
 				<p2>Mettre du texte ici vite fait</p2>
+			</br>
 				<a href="#">Lire plus</a>
 			</div>
 		</div>
@@ -32,8 +33,9 @@
 			<div class = "content">
 				<h2>Carte 3</h2>
 				<p2>Mettre du texte ici vite fait</p2>
+			</br>
 				<a href="#">Lire plus</a>
 			</div>
 		</div>	
-
 </body>
+</html>
