--- a/accueil.html
+++ b/accueil.html
@@ -11,37 +11,31 @@
 
 <body>
 
-	<header class="header">WallHack</header>
+	<header class="header">WallHack - Accueil</header>
 	<div class="transition transition is-active"></div>
 
 	<nav class="navbar">
 		<ul class="navbar-menu">
-
 			<li class="navbar-item">
 				<a class="navbar-link navbar-title">Menu</a>
 				<i class="fas fa-chevron-right navbar-icon fa-lg logo"></i>
 			</li>
-
 			<li class="navbar-item">
 				<i class="fas fa-home fa-lg navbar-icon"></i>
 				<a href="accueil.html" class="navbar-link">Accueil</a>
 			</li>
-
 			<li class="navbar-item ">
 				<i class="fas fa-folder fa-lg navbar-icon"></i>
 				<a href="documentation.html" class="navbar-link">Documentation</a>
 			</li>
-
 			<li class="navbar-item ">
 				<i class="fas fa-address-card fa-lg navbar-icon"></i>
 				<a href="credits.html" class="navbar-link">Credits</a>
 			</li>
-
 			<li class="navbar-item ">
 				<i class="fas fa-sign-out-alt fa-lg navbar-icon"></i>
 				<a href="index.html" class="navbar-link">Quitter</a>
 			</li>
-
 		</ul>
 	</nav>
 
