--- a/documentation.html
+++ b/documentation.html
@@ -18,19 +18,19 @@
 			</li>
 			<li class="navbar-item">
 				<i class="fas fa-home fa-lg navbar-icon"></i>
-				<a href="../accueil.html" class="navbar-link">Accueil</a>
+				<a href="accueil.html" class="navbar-link">Accueil</a>
 			</li>
 			<li class="navbar-item ">
 				<i class="fas fa-folder fa-lg navbar-icon"></i>
-				<a href="../documentation.html" class="navbar-link">Documentation</a>
+				<a href="documentation.html" class="navbar-link">Documentation</a>
 			</li>
 			<li class="navbar-item ">
 				<i class="fas fa-address-card fa-lg navbar-icon"></i>
-				<a href="../credits.html" class="navbar-link">Credits</a>
+				<a href="credits.html" class="navbar-link">Credits</a>
 			</li>
 			<li class="navbar-item ">
 				<i class="fas fa-sign-out-alt fa-lg navbar-icon"></i>
-				<a href="../index.html" class="navbar-link">Quitter</a>
+				<a href="index.html" class="navbar-link">Quitter</a>
 			</li>
 		</ul>
 	</nav>
