header+footer doc, + font

--- a/documentation.html
+++ b/documentation.html
@@ -114,6 +114,10 @@
 				</div>
 			</div>
 
-		</div>	
+		</div>
+		
+		<footer class="footer">
+			<p>Copyright © WallHack</p>
+		</footer>
 </body>
 </html>
