--- a/accueil.html
+++ b/accueil.html
@@ -41,11 +41,11 @@
 
 	<div class="text">
 		<div class = "welcome">
-			<h1> Bienvenue sur WallHack, le site de documentation sur la cybersécurité !</h1>
+			<h1>Bienvenue sur WallHack, le site de documentation  <span id="text"></span></h1>
 		</div>
 	</div>
+	<script src="js/accueil.js"></script>
 
-	
 	<footer class="footer">
 		<p>Copyright © WallHack</p>
 	</footer>
