--- a/credits.html
+++ b/credits.html
@@ -3,16 +3,16 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Template</title>
-	<link rel="stylesheet" type="text/css" href="../css/documentations.css" />
+	<title>WallHack - Credits</title>
+	<link rel="stylesheet" type="text/css" href="css/style_credits.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
-	<script src="../js/transition.js"></script>
+	<script src="js/transition.js"></script>
 </head>
 
 <body>
     <div class="transition transition is-active"></div>
 
-    <header class="header">WallHack - Template</header>
+    <header class="header">WallHack - Credits</header>
 
     <nav class="navbar">
 		<ul class="navbar-menu">
@@ -22,19 +22,19 @@
 			</li>
 			<li class="navbar-item">
 				<i class="fas fa-home fa-lg navbar-icon"></i>
-				<a href="../accueil.html" class="navbar-link">Accueil</a>
+				<a href="accueil.html" class="navbar-link">Accueil</a>
 			</li>
 			<li class="navbar-item ">
 				<i class="fas fa-folder fa-lg navbar-icon"></i>
-				<a href="../documentation.html" class="navbar-link">Documentation</a>
+				<a href="documentation.html" class="navbar-link">Documentation</a>
 			</li>
 			<li class="navbar-item ">
 				<i class="fas fa-address-card fa-lg navbar-icon"></i>
-				<a href="../credits.html" class="navbar-link">Credits</a>
+				<a href="credits.html" class="navbar-link">Credits</a>
 			</li>
 			<li class="navbar-item ">
 				<i class="fas fa-sign-out-alt fa-lg navbar-icon"></i>
-				<a href="../index.html" class="navbar-link">Quitter</a>
+				<a href="index.html" class="navbar-link">Quitter</a>
 			</li>
 		</ul>
 	</nav>
