--- a/accueil.html
+++ b/accueil.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>WallHack</title>
+	<title>WallHack - Accueil</title>
 	<link rel="stylesheet" type="text/css" href="css/accueil-style.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="js/transition.js"></script>
