--- a/documentation.html
+++ b/documentation.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<title>Documentation</title>
+	<title>WallHack - Documentation</title>
 	<link rel="stylesheet" type="text/css" href="css/style_doc.css">
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="js/transition.js"></script>
 </head>
 
 <body>
-	<header class="header">WallHack - Template</header>
+	<header class="header">WallHack - Documentation</header>
 
     <nav class="navbar">
 		<ul class="navbar-menu">
