--- a/documentation.html
+++ b/documentation.html
@@ -43,7 +43,7 @@
 					<h2>Le Phishing</h2>
 					<p2>Comment les arnaqueurs procèdent et comment s’en protéger.</p2>
 				</br>
-					<a href="#">Lire plus</a>
+					<a href="documentation/phishing.html">Lire plus</a>
 				</div>
 			</div>	
 			<div class = "box">
