--- a/credits.html
+++ b/credits.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
 		<ul class="navbar-menu">
 			<li class="navbar-item">
-				<a class="navbar-link navbar-title">Menu</a>
+				<div class="navbar-link navbar-title">Menu</div>
 				<i class="fas fa-chevron-right navbar-icon fa-lg logo"></i>
 			</li>
 			<li class="navbar-item">
@@ -39,8 +39,31 @@
 		</ul>
 	</nav>
 
-    <div class="content">
-        <div></div>
+    <div class="container">
+        <div class ="card">
+            <div class ="content"> 
+                <h2>01</h2>
+                <h3>Cedric</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                <a href="#">Voir Plus</a>
+            </div>
+        </div>
+        <div class ="card">
+            <div class ="content"> 
+                <h2>02</h2>
+                <h3>Autres</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                <a href="#">Voir Plus</a>
+            </div>
+        </div>
+        <div class ="card">
+            <div class ="content"> 
+                <h2>03</h2>
+                <h3>Tom</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                <a href="#">Voir Plus</a>
+            </div>
+        </div>
     </div>
 
     <footer class="footer">
