--- a/documentation/template.html
+++ b/documentation/template.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
 		<ul class="navbar-menu">
 			<li class="navbar-item">
-				<a class="navbar-link navbar-title">Menu</a>
+				<div class="navbar-link navbar-title">Menu</div>
 				<i class="fas fa-chevron-right navbar-icon fa-lg logo"></i>
 			</li>
 			<li class="navbar-item">
