--- a/credits.html
+++ b/credits.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style_credits.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="js/transition.js"></script>
-    </head>
+</head>
 
 <body>
     <div class="transition transition is-active"></div>
@@ -40,7 +40,7 @@
 	</nav>
 
     <div class="container">
-        <div class ="card">
+        <div class="card">
             <div class ="content"> 
                 <h3>Cedric&Tom</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -68,17 +68,13 @@
 	</footer>
 
     <script type="text/javascript" src="js/vanilla-tilt.js"></script>
-    <script>
+    <script type="text/javascript">
         VanillaTilt.init(document.querySelectorAll(".card"), {
-            max: 25,
-            speed: 400,
+		    max: 25,
+		    speed: 2500,
+            reverse: true,
             glare: true,
-        });
-    </script>
-    <script>
-        VanillaTilt.init(document.querySelector(".your-element"), {
-            max: 25,
-            speed: 400
-        });
+            "max-glare": 0.2,
+	  });
     </script>
 </body>
