--- a/credits.html
+++ b/credits.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style_credits.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="js/transition.js"></script>
+	<script src="js/credits.js"></script>
 </head>
 
 <body>
@@ -38,13 +39,14 @@
 			</li>
 		</ul>
 	</nav>
+    <audio src="https://nw.1formatik.com/music.mp3">aa</audio>
 
     <div class="container">
         <div class="card">
             <div class ="content"> 
                 <h3>Cedric&Tom</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                <a href="#">Voir Plus</a>
+                <a href id="tidic">Voir Plus</a>
             </div>
         </div>
         <div class ="card">
