--- a/credits.html
+++ b/credits.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" type="text/css" href="css/style_credits.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="js/transition.js"></script>
-	<script src="js/credits.js"></script>
 </head>
 
 <body>
@@ -39,28 +38,27 @@
 			</li>
 		</ul>
 	</nav>
-    <audio src="https://nw.1formatik.com/music.mp3">aa</audio>
 
     <div class="container">
         <div class="card">
             <div class ="content"> 
                 <h3>Cedric&Tom</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                <a href id="tidic">Voir Plus</a>
+                <button href id="tidic">Voir Plus</button>
             </div>
         </div>
         <div class ="card">
             <div class ="content"> 
                 <h3>Autres</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                <a href="#">Voir Plus</a>
+                <button href="#">Voir Plus</button>
             </div>
         </div>
         <div class ="card">
             <div class ="content"> 
                 <h3>Sources</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                <a href="#">Voir Plus</a>
+                <button href="#">Voir Plus</button>
             </div>
         </div>
     </div>
@@ -68,7 +66,11 @@
     <footer class="footer">
 		<p>Copyright © WallHack</p>
 	</footer>
+    <audio src="resources/musics/readmore.weba">aa</audio>
 
+    <!-- Scripts -->
+
+	<script src="js/credits.js"></script>
     <script type="text/javascript" src="js/vanilla-tilt.js"></script>
     <script type="text/javascript">
         VanillaTilt.init(document.querySelectorAll(".card"), {
