--- a/credits.html
+++ b/credits.html
@@ -43,14 +43,14 @@
         <div class="card">
             <div class ="content"> 
                 <h3>Cedric&Tom</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                <p>Tidic#0499 <br>Youko#3001</p>
                 <button href id="tidic">Voir Plus</button>
             </div>
         </div>
         <div class ="card">
             <div class ="content"> 
                 <h3>Autres</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                <p>ungars#0000</p>
                 <button href="#">Voir Plus</button>
             </div>
         </div>
