--- a/accueil.html
+++ b/accueil.html
@@ -45,6 +45,10 @@
 		</div>
 	</div>
 	<script src="js/accueil.js"></script>
+	
+	<div class="intro">
+		<h2>La cybersécurité protège les données et l’intégrité des ressources informatiques connectées ou installées sur un réseau d’entreprise.</br>Elle a pour mission de défendre ces ressources contre tous les pirates, et ce tout au long du cycle d’attaque.</h2>
+	</div>
 
 	<footer class="footer">
 		<p>Copyright © WallHack</p>
