credits + doc color

--- a/documentation.html
+++ b/documentation.html
@@ -50,7 +50,7 @@
 				<span></span>
 				<div class = "content">
 					<h2>Les Faille 0d</h2>
-					<p2>La dangerosité de Pegasus</p2>
+					<p2>La dangerosité de Pegasus!</p2>
 				</br>
 					<a href="#">Lire plus</a>
 				</div>
@@ -59,7 +59,7 @@
 				<span></span>
 				<div class = "content">
 					<h2>Le Dark Web</h2>
-					<p2>Comment marche le peer to peer, un réseau décentralisé</p2>
+					<p2>Comment marche le peer to peer, un réseau décentralisé.</p2>
 				</br>
 					<a href="#">Lire plus</a>
 				</div>
@@ -69,7 +69,7 @@
 					<span></span>
 					<div class = "content">
 						<h2>Les cryptomonnaies</h2>
-						<p2>Comment fonctionne la blockchain</p2>
+						<p2>Comment fonctionne la blockchain ?</p2>
 					</br>
 						<a href="#">Lire plus</a>
 					</div>
@@ -78,7 +78,7 @@
 				<span></span>
 				<div class = "content">
 					<h2>Les os offensifs et les outils</h2>
-					<p2>(Kali linux)(nmap metasploit)</p2>
+					<p2>Comment fonctionne Kali linux et ses outils principaux.</p2>
 				</br>
 					<a href="#">Lire plus</a>
 				</div>
@@ -88,7 +88,7 @@
 				<span></span>
 				<div class = "content">
 					<h2>Les failles sql</h2>
-					<p2>Comment s’en protége</p2>
+					<p2>Leur fonctionnement et leur parade.</p2>
 				</br>
 					<a href="#">Lire plus</a>
 				</div>
@@ -98,7 +98,7 @@
 				<span></span>
 				<div class = "content">
 					<h2>Les attaques DDOS</h2>
-					<p2>Comment s’en protéger</p2>
+					<p2>Comment ça marche et comment s’en protéger ?</p2>
 				</br>
 					<a href="#">Lire plus</a>
 				</div>
@@ -117,5 +117,14 @@
 		<footer class="footer">
 			<p>Copyright © WallHack</p>
 		</footer>
+
+		<script type="text/javascript" src="js/vanilla-tilt.js"></script>
+		<script type="text/javascript">
+			VanillaTilt.init(document.querySelectorAll(".box"), {
+				max: 5,
+				speed: 5000,
+				reverse: true,
+		  });
+		</script>
 </body>
 </html>
