--- a/credits.html
+++ b/credits.html
@@ -50,7 +50,7 @@
         <div class ="card">
             <div class ="content"> 
                 <h3>Autres</h3>
-                <p>ungars#0000</p>
+                <p>Proxyme</p>
                 <button href="#">Voir Plus</button>
             </div>
         </div>
