navbar-icones cliquables

--- a/accueil.html
+++ b/accueil.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>WallHack - Accueil</title>
-	<link rel="stylesheet" type="text/css" href="css/accueil-style.css" />
+	<link rel="stylesheet" type="text/css" href="css/style_accueil.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="js/transition.js"></script>
 </head>
@@ -17,23 +17,23 @@
 	<nav class="navbar">
 		<ul class="navbar-menu">
 			<li class="navbar-item">
-				<a class="navbar-link navbar-title">Menu</a>
+				<div class="navbar-link navbar-title">Menu</div>
 				<i class="fas fa-chevron-right navbar-icon fa-lg logo"></i>
 			</li>
 			<li class="navbar-item">
-				<i class="fas fa-home fa-lg navbar-icon"></i>
+				<a href="accueil.html" class="fas fa-home fa-lg navbar-icon"></a>
 				<a href="accueil.html" class="navbar-link">Accueil</a>
 			</li>
 			<li class="navbar-item ">
-				<i class="fas fa-folder fa-lg navbar-icon"></i>
+				<a href="documentation.html" class="fas fa-folder fa-lg navbar-icon"></a>
 				<a href="documentation.html" class="navbar-link">Documentation</a>
 			</li>
 			<li class="navbar-item ">
-				<i class="fas fa-address-card fa-lg navbar-icon"></i>
+				<a href="credits.html" class="fas fa-address-card fa-lg navbar-icon"></a>
 				<a href="credits.html" class="navbar-link">Credits</a>
 			</li>
 			<li class="navbar-item ">
-				<i class="fas fa-sign-out-alt fa-lg navbar-icon"></i>
+				<a href="index.html" class="fas fa-sign-out-alt fa-lg navbar-icon"></a>
 				<a href="index.html" class="navbar-link">Quitter</a>
 			</li>
 		</ul>
