--- a/credits.html
+++ b/credits.html
@@ -21,19 +21,19 @@
 				<i class="fas fa-chevron-right navbar-icon fa-lg logo"></i>
 			</li>
 			<li class="navbar-item">
-				<i class="fas fa-home fa-lg navbar-icon"></i>
+				<a href="accueil.html" class="fas fa-home fa-lg navbar-icon"></a>
 				<a href="accueil.html" class="navbar-link">Accueil</a>
 			</li>
 			<li class="navbar-item ">
-				<i class="fas fa-folder fa-lg navbar-icon"></i>
+				<a href="documentation.html" class="fas fa-folder fa-lg navbar-icon"></a>
 				<a href="documentation.html" class="navbar-link">Documentation</a>
 			</li>
 			<li class="navbar-item ">
-				<i class="fas fa-address-card fa-lg navbar-icon"></i>
+				<a href="credits.html" class="fas fa-address-card fa-lg navbar-icon"></a>
 				<a href="credits.html" class="navbar-link">Credits</a>
 			</li>
 			<li class="navbar-item ">
-				<i class="fas fa-sign-out-alt fa-lg navbar-icon"></i>
+				<a href="index.html" class="fas fa-sign-out-alt fa-lg navbar-icon"></a>
 				<a href="index.html" class="navbar-link">Quitter</a>
 			</li>
 		</ul>
