--- a/documentation/template.html
+++ b/documentation/template.html
@@ -39,8 +39,8 @@
 		</ul>
 	</nav>
 
-    <div class="content">
-        <div></div>
+    <div class="container">
+        <div class="title">Template Title</div>
     </div>
 
     <footer class="footer">
