--- a/credits.html
+++ b/credits.html
@@ -49,9 +49,8 @@
         </div>
         <div class ="card">
             <div class ="content"> 
-                <h3>Autres</h3>
-                <p>Proxyme</p>
-                <button href="#">Voir Plus</button>
+                <h3>Merci a :</h3>
+                <p>Proxyme, pour des problemes d'apparition <br><br> Sarka, pour la clarification du métier de pintester</p>
             </div>
         </div>
         <div class ="card">
