--- a/credits.html
+++ b/credits.html
@@ -51,6 +51,7 @@
             <div class ="content"> 
                 <h3>Merci a :</h3>
                 <p>Proxyme, pour des problemes d'apparition <br><br> Sarka, pour la clarification du métier de pintester</p>
+                <button href id="youko">Voir plus</button>
             </div>
         </div>
         <div class ="card">
