--- a/documentation.html
+++ b/documentation.html
@@ -87,8 +87,8 @@
 			<div class = "box">
 				<span></span>
 				<div class = "content">
-					<h2>Les failles sql</h2>
-					<p2>Leur fonctionnement et leur parade.</p2>
+					<h2>Network</h2>
+					<p2>En quoi cela consiste reelement ?</p2>
 				</br>
 					<a href="#">Lire plus</a>
 				</div>
