oui j'ai fait un commit juste pour un espace

--- a/credits.html
+++ b/credits.html
@@ -49,7 +49,7 @@
         </div>
         <div class ="card">
             <div class ="content"> 
-                <h3>Merci a :</h3>
+                <h3>Merci à:</h3>
                 <p>Proxyme, pour des problemes d'apparition <br><br> Sarka, pour la clarification du métier de pintester</p>
                 <button href id="youko">Voir plus</button>
             </div>
