--- a/documentation.html
+++ b/documentation.html
@@ -52,7 +52,7 @@
 					<h2>Les Faille 0d</h2>
 					<p2>La dangerosité de Pegasus!</p2>
 				</br>
-					<a href="#">Lire plus</a>
+					<a href="documentation/f0d.html">Lire plus</a>
 				</div>
 			</div>
 			<div class = "box">
