--- a/documentation/f0d.html
+++ b/documentation/f0d.html
@@ -13,6 +13,26 @@
 
     <header class="header">WallHack - Les failles 0d</header>
 
+    <br>
+    <br>
+    <div class="container">
+		<div class="titre1">
+			<h1 style="text-align:center;"><u><strong>Les failles 0d</strong></u></h1>
+		</div>
+		
+		<div class="texte1">
+			<p>« Zero-day » est un terme générique qui décrit les dernières vulnérabilités de sécurité détectées que les cybercriminels peuvent utiliser pour attaquer les systèmes. <br> Le terme « zero-day » désigne le fait que le fournisseur ou le développeur vient de prendre connaissance de la faille, ce qui signifie qu’il a « zéro jour » pour la corriger. Une attaque zero-day survient lorsque les cybercriminels exploitent la faille avant que les développeurs n’aient la possibilité de la rectifier.<br>Le terme « zero-day » s’écrit parfois « 0-day ». Les mots vulnérabilité, faille d’exploitation et attaque accompagnent généralement le terme zero-day et ont des significations différentes :
+
+			</p>
+
+		</div>
+		<div class="titre1-2">
+			<h2>.</h2>
+		</div>
+		<div class="texte1">
+		</div>......
+		</div>
+
     <nav class="navbar">
 		<ul class="navbar-menu">
 			<li class="navbar-item">
