--- a/documentation.html
+++ b/documentation.html
@@ -71,7 +71,7 @@
 						<h2>Les cryptomonnaies</h2>
 						<p2>Comment fonctionne la blockchain ?</p2>
 					</br>
-						<a href="#">Lire plus</a>
+						<a href="documentation/crypto.html">Lire plus</a>
 					</div>
 				</div>	
 			<div class = "box">
