--- a/documentation/crypto.html
+++ b/documentation/crypto.html
@@ -46,7 +46,9 @@
 			<p>
 				<c>Les cryptomonnaies</c> sont des monnaies <strong>virtuelles</strong> mais contrairement aux banques traditionnelles, 
 				elles sont basées sur <strong>la blockchain</strong>. Elles sont décentralisées, 
-				et donc plus <strong>sécurisées</strong> du au fait que les transactions sont validées par un ensemble d’utilisateurs.
+				et donc plus <strong>sécurisées</strong> du au fait que les transactions sont validées par un ensemble d’utilisateurs. 
+				Il est souvent dit que les cryptomonnaies sont anonymes, car elles ne sont pas liées à un nom d’utilisateur. 
+				Mais elles sont en réalité rétractables car toutes les transactions sont écrites dans la blockchain.
 			</p>
 		</div>
 
@@ -56,14 +58,36 @@
 			en peer to peer, ou en pair à pair. 
 			Elle fonctionne donc sans organe central car chaque utilisateur est un nœud, 
 			et doit assumer des fonctions serveur. 
-			La blockchain est une base de données qui est hébergée chez tous les pairs. 
+			La blockchain est une base de données qui est hébergée par tous les pairs.
+			<div class="box" style="float: left; width: 280px; height: 280px;">
+				<img src="../resources/images/crypto/server-based.png" alt="Il y avais une image la :cry:" width="250" height="250"> 
+			<br><p>Réseau centralisé</p>
+			</div>
+			<div class="box" style="width: 280px; height: 280px;">
+				<img src="../resources/images/crypto/p2p-network.png" alt="Il y avais une image la :cry:" width="250" height="250"> 
+				<p>Réseau décentralisé</p>
+			</div>
+
 		</div>
 
 		<div class ="subtitle">Comment fonctionne la blockchain ?</div>
-		<div class = "text">
+		<div class ="text">
 			Une blockchain est comme son nom l’indique une chaîne de blocs dans lesquelles sont inscrites les transactions, 
 			elles doivent être scellées avec un hash à chiffrage asymétrique, 
 			c’est chiffrage qui possède une clé pour le chiffrage (clé publique) et une autre clé pour le déchiffrage (clé privée).
+			Mais il y a une difficulté au calcul des ces hashs,
+			elle est ajustée pour qu’un bloc soit généré en moyenne toutes les 10 minutes.
+			Par exemple: les hashs doivent commencer par un certain nombre de zéro,
+			et donc il faut tester des combinaisons aléatoires jusqu'à obtenir le bon hash.
+			Tout cela utilise énormément de puissance de calcul.
+		</div>
+		<div class="box" style="float: left; width: 280px; height: 280px;">
+			<img src="../resources/images/crypto/chiffrement-symetrique.png" alt="Il y avais une image la :cry:" width="250" height="250"> 
+		<br><p>Chiffrement symétrique</p>
+		</div>
+		<div class="box" style="width: 280px; height: 280px;">
+			<img src="../resources/images/crypto/chiffrement-asymetrique.png" alt="Il y avais une image la :cry:" width="250" height="250"> 
+			<p>Chiffrement asymétrique</p>
 		</div>
     </div>
 
