--- a/documentation/crypto.html
+++ b/documentation/crypto.html
@@ -43,13 +43,11 @@
 
         <div class="title">Les cryptomonnaies</div>
 		<div class = "text">
-			<p>
-				<c>Les cryptomonnaies</c> sont des monnaies <strong>virtuelles</strong> mais contrairement aux banques traditionnelles, 
-				elles sont basées sur <strong>la blockchain</strong>. Elles sont décentralisées, 
-				et donc plus <strong>sécurisées</strong> du au fait que les transactions sont validées par un ensemble d’utilisateurs. 
-				Il est souvent dit que les cryptomonnaies sont anonymes, car elles ne sont pas liées à un nom d’utilisateur. 
-				Mais elles sont en réalité rétractables car toutes les transactions sont écrites dans la blockchain.
-			</p>
+			Les cryptomonnaies sont des monnaies <strong>virtuelles</strong> mais contrairement aux banques traditionnelles, 
+			elles sont basées sur <strong>la blockchain</strong>. Elles sont décentralisées, 
+			et donc plus <strong>sécurisées</strong> du au fait que les transactions sont validées par un ensemble d’utilisateurs. 
+			Il est souvent dit que les cryptomonnaies sont anonymes, car elles ne sont pas liées à un nom d’utilisateur. 
+			Mais elles sont en réalité rétractables car toutes les transactions sont écrites dans la blockchain.
 		</div>
 
 		<div class ="subtitle">Qu'est ce qu’est la Blockchain ?</div>
@@ -60,11 +58,11 @@
 			et doit assumer des fonctions serveur. 
 			La blockchain est une base de données qui est hébergée par tous les pairs.
 			<div class="box" style="float: left; width: 280px; height: 280px;">
-				<img src="../resources/images/crypto/server-based.png" alt="Il y avais une image la :cry:" width="250" height="250"> 
+				<img src="../resources/images/crypto/centralized-network.png" alt="Il y avais une image la :cry:" width="250" height="250"> 
 			<br><p>Réseau centralisé</p>
 			</div>
 			<div class="box" style="width: 280px; height: 280px;">
-				<img src="../resources/images/crypto/p2p-network.png" alt="Il y avais une image la :cry:" width="250" height="250"> 
+				<img src="../resources/images/crypto/decentralized-network.png" alt="Il y avais une image la :cry:" width="250" height="250"> 
 				<p>Réseau décentralisé</p>
 			</div>
 
@@ -88,6 +86,17 @@
 		<div class="box" style="width: 280px; height: 280px;">
 			<img src="../resources/images/crypto/chiffrement-asymetrique.png" alt="Il y avais une image la :cry:" width="250" height="250"> 
 			<p>Chiffrement asymétrique</p>
+		</div>
+
+		<div class ="text">
+			Quand un utilisateur trouve le bon hash et envoie son bloc, 
+			il est inscrit dans la blockchain et reçoit un certain nombre de bitcoin qui sont générés, 
+			ces personnes sont appelés “mineurs” car quand notre économie était basé sur l’or, 
+			les mineurs étaient les seuls à apporter de la masse monétaire tout comme les mineur de bitcoin.
+
+
+			<br>
+			
 		</div>
     </div>
 
