--- a/documentation/crypto.html
+++ b/documentation/crypto.html
@@ -47,7 +47,7 @@
 			elles sont basées sur <strong>la blockchain</strong>. Elles sont décentralisées, 
 			et donc plus <strong>sécurisées</strong> du au fait que les transactions sont validées par un ensemble d’utilisateurs. 
 			Il est souvent dit que les cryptomonnaies sont anonymes, car elles ne sont pas liées à un nom d’utilisateur. 
-			Mais elles sont en réalité rétractables car toutes les transactions sont écrites dans la blockchain.
+			Mais elles sont en réalité retraçable car toutes les transactions sont écrites dans la blockchain.
 		</div>
 
 		<div class ="subtitle">Qu'est ce qu’est la Blockchain ?</div>
