--- a/documentation/crypto.html
+++ b/documentation/crypto.html
@@ -72,7 +72,7 @@
 		<div class ="text">
 			Une blockchain est comme son nom l’indique une chaîne de blocs dans lesquelles sont inscrites les transactions, 
 			elles doivent être scellées avec un hash à chiffrage asymétrique, 
-			c’est chiffrage qui possède une clé pour le chiffrage (clé publique) et une autre clé pour le déchiffrage (clé privée).
+			c’est un chiffrage qui possède une clé pour le chiffrage (clé publique) et une autre clé pour le déchiffrage (clé privée).
 			Mais il y a une difficulté au calcul des ces hashs,
 			elle est ajustée pour qu’un bloc soit généré en moyenne toutes les 10 minutes.
 			Par exemple: les hashs doivent commencer par un certain nombre de zéro,
@@ -92,7 +92,7 @@
 			Quand un utilisateur trouve le bon hash et envoie son bloc, 
 			il est inscrit dans la blockchain et reçoit un certain nombre de bitcoin qui sont générés, 
 			ces personnes sont appelés “mineurs” car quand notre économie était basé sur l’or, 
-			les mineurs étaient les seuls à apporter de la masse monétaire tout comme les mineur de bitcoin.
+			les mineurs étaient les seuls à apporter de la masse monétaire tout comme les mineurs de bitcoin.
 
 
 			<br>
