--- a/documentation/template.html
+++ b/documentation/template.html
@@ -40,11 +40,46 @@
 	</nav>
 
     <div class="container">
-        <div class="title">Template Title</div>
+        
+		<div class="title">Template - Title</div>
+		<div class = "text">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+			Nunc suscipit lorem dolor, 
+			a aliquet odio placerat in. 
+			Maecenas dui ligula, congue consectetur ante id, 
+			finibus consequat tellus.
+		</div>
+
+		<div class ="subtitle">Template Subtitle</div>
+		<div class = "text">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+			Nunc suscipit lorem dolor, 
+			a aliquet odio placerat in. 
+			Maecenas dui ligula, congue consectetur ante id, 
+			finibus consequat tellus. 
+			Nunc feugiat elementum arcu.
+		</div>
+
+		<div class ="subtitle">Template Subtitle</div>
+		<div class ="text">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+			Nunc suscipit lorem dolor, 
+			a aliquet odio placerat in. 
+			Maecenas dui ligula, congue consectetur ante id, 
+			finibus consequat tellus. 
+			Nunc feugiat elementum arcu, 
+			nec pellentesque velit ultricies vel. 
+			Nulla odio odio, faucibus eu ante sit amet, 
+			pharetra convallis arcu. Donec ac nisi ac nisl lobortis gravida a nec augue. 
+			Cras tincidunt vehicula metus vitae lacinia. Pellentesque id luctus quam. 
+			Nullam mollis elementum diam, suscipit consectetur nisi consequat eleifend. 
+			Suspendisse cursus erat leo.
+		</div>
     </div>
+
 
     <footer class="footer">
 		<p>Copyright © WallHack</p>
 	</footer>
-
+<!-- Template by Tidic (oui j'ai le melon !) -->
 </body>
