centralisation dans un seul fichier css

--- a/documentation/f0d.html
+++ b/documentation/f0d.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Le phishing</title>
-	<link rel="stylesheet" type="text/css" href="../css/style_f0d.css" />
+	<title>WallHack - Les failles 0d</title>
+	<link rel="stylesheet" type="text/css" href="../css/documentations.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="../js/transition.js"></script>
 </head>
@@ -13,26 +13,28 @@
 
     <header class="header">WallHack - Les failles 0d</header>
 
-    <br>
-    <br>
     <div class="container">
-		<div class="titre1">
-			<h1 style="text-align:center;"><u><strong>Les failles 0d</strong></u></h1>
-		</div>
-		
-		<div class="texte1">
-			<p>« Zero-day » est un terme générique qui décrit les dernières vulnérabilités de sécurité détectées que les cybercriminels peuvent utiliser pour attaquer les systèmes. <br> Le terme « zero-day » désigne le fait que le fournisseur ou le développeur vient de prendre connaissance de la faille, ce qui signifie qu’il a « zéro jour » pour la corriger. Une attaque zero-day survient lorsque les cybercriminels exploitent la faille avant que les développeurs n’aient la possibilité de la rectifier.<br>Le terme « zero-day » s’écrit parfois « 0-day ». Les mots vulnérabilité, faille d’exploitation et attaque accompagnent généralement le terme zero-day et ont des significations différentes :
-
-			</p>
-
-		</div>
-		<div class="titre1-2">
-			<h2>.</h2>
-		</div>
-		<div class="texte1">
-		</div>......
+		<div class="title">Les failles 0d</div>
+		<div class="text">
+			« Zero-day » est un terme générique qui décrit les dernières vulnérabilités de sécurité détectées que les cybercriminels peuvent utiliser pour attaquer les systèmes.<br> 
+			Le terme « zero-day » désigne le fait que le fournisseur ou le développeur vient de prendre connaissance de la faille, 
+			ce qui signifie qu’il a « zéro jour » pour la corriger. 
+			Une attaque zero-day survient lorsque les cybercriminels exploitent la faille avant que les développeurs n’aient la possibilité de la rectifier.<br>
+			Le terme « zero-day » s’écrit parfois « 0-day ». 
+			Les mots vulnérabilité, 
+			faille d’exploitation et attaque accompagnent généralement le terme zero-day et ont des significations différentes :
 		</div>
 
+		<div class="subtitle">Subtitle</div>
+		<div class="text">
+				Vulnérabilité : une faille est une faille.
+				Faille d’exploitation : une faille d’exploitation est une faille.
+				Attaque : une attaque est une attaque.
+				<!-- Texte template-->
+		</div>
+	</div>
+
+	
     <nav class="navbar">
 		<ul class="navbar-menu">
 			<li class="navbar-item">
@@ -58,10 +60,7 @@
 		</ul>
 	</nav>
 
-    <div class="content">
-        <div></div>
-    </div>
-        <footer class="footer">
+    <footer class="footer">
 		<p>Copyright © WallHack</p>
 	</footer>
 
