--- a/documentation.html
+++ b/documentation.html
@@ -61,7 +61,7 @@
 					<h2>Le Dark Web</h2>
 					<p2>Comment marche le peer to peer, un réseau décentralisé.</p2>
 				</br>
-					<a href="#">Lire plus</a>
+					<a href="documentation/dw.html">Lire plus</a>
 				</div>
 			</div>
 
@@ -80,7 +80,7 @@
 					<h2>Les os offensifs et les outils</h2>
 					<p2>Comment fonctionne Kali linux et ses outils principaux.</p2>
 				</br>
-					<a href="#">Lire plus</a>
+					<a href="documentation/kali.html">Lire plus</a>
 				</div>
 			</div>
 
@@ -90,7 +90,7 @@
 					<h2>Network</h2>
 					<p2>En quoi cela consiste reelement ?</p2>
 				</br>
-					<a href="#">Lire plus</a>
+					<a href="documentation/network.html">Lire plus</a>
 				</div>
 			</div>	
 
@@ -100,7 +100,7 @@
 					<h2>Les attaques DDOS</h2>
 					<p2>Comment ça marche et comment s’en protéger ?</p2>
 				</br>
-					<a href="#">Lire plus</a>
+					<a href="documentation/ddos.html">Lire plus</a>
 				</div>
 			</div>	
 
@@ -110,7 +110,7 @@
 					<h2>Le top 10 d'OWASP</h2>
 					<p2>Qu'est ce que c'est ?</p2>
 				</br>
-					<a href="#">Lire plus</a>
+					<a href="owasp.html">Lire plus</a>
 				</div>
 			</div>
 		</div>
