--- a/documentation/kali.html
+++ b/documentation/kali.html
@@ -56,23 +56,18 @@
 		<div class ="subtitle">Qu'est ce que c'est ?</div>
 		<div class = "text">
 			Kali linux est une distribution de “pen test” ou tests de pénétration. 
-			Il a déscend directement de la distribution du premier pen test os. 
+			Il descend directement de la distribution du premier pen test os. 
+			(Whoppix / WHAX / BackTrack / Kali Linux)
+			Son nom est tiré de son usage initial: Kernel Auditing Linux.
+			<div class="box" style="width: 280px; height: 280px;">
+				<img src="../resources/images/crypto/kali.png" alt="Il y avais une image la :cry:" width="250" height="250"> 
+				<p>Kali linux</p>
+			</div>
 		</div>
 
-		<div class ="subtitle">Template Subtitle</div>
+		<div class ="subtitle">Les outils</div>
 		<div class ="text">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-			Nunc suscipit lorem dolor, 
-			a aliquet odio placerat in. 
-			Maecenas dui ligula, congue consectetur ante id, 
-			finibus consequat tellus. 
-			Nunc feugiat elementum arcu, 
-			nec pellentesque velit ultricies vel. 
-			Nulla odio odio, faucibus eu ante sit amet, 
-			pharetra convallis arcu. Donec ac nisi ac nisl lobortis gravida a nec augue. 
-			Cras tincidunt vehicula metus vitae lacinia. Pellentesque id luctus quam. 
-			Nullam mollis elementum diam, suscipit consectetur nisi consequat eleifend. 
-			Suspendisse cursus erat leo.
+			L'outil le plus utilisé
 		</div>
     </div>
 
