--- a/documentation/kali.html
+++ b/documentation/kali.html
@@ -67,7 +67,9 @@
 
 		<div class ="subtitle">Les outils</div>
 		<div class ="text">
-			L'outil le plus utilisé
+			L’outil le plus utilisé est Nmap, pour “Network Mapper”, 
+			c’est un outil qui scanne les scan les ports d’un réseau choisi. 
+			Il est conçu pour détecter les ports ouverts, identifier
 		</div>
     </div>
 
