--- a/documentation/kali.html
+++ b/documentation/kali.html
@@ -69,7 +69,24 @@
 		<div class ="text">
 			L’outil le plus utilisé est Nmap, pour “Network Mapper”, 
 			c’est un outil qui scanne les scan les ports d’un réseau choisi. 
-			Il est conçu pour détecter les ports ouverts, identifier
+			Il est conçu pour détecter les ports ouverts, 
+			identifier les services hébergés et obtenir des informations sur le système d'exploitation d'une machine.
+			Pour scanner ces ports, nmap utilise des techniques divers et variés s'appuient sur les protocoles TCP, IP, UDP ou ICMP.
+			<br>
+			<br>
+			Puis Aircrack est un ensemble d’outils permettant d’évaluer la sécurité du réseau WiFi. 
+			Cela ne se limite pas à surveiller et à obtenir des informations, il inclut également la possibilité de compromettre un réseau (WEP, WPA 1 et WPA 2).
+			<br>
+			<br>
+			Hydra est un cracker de connexion parallélisé qui prend en charge de nombreux protocoles d'attaque. 
+			Il est très rapide et flexible, et de nouveaux modules sont faciles à ajouter.
+			Cet outil permet aux chercheurs et consultants en sécurité de montrer à quel point il serait facile d'accéder à distance à un système sans autorisation
+			<br>
+			<br>
+			Merasploit est en relation avec la sécurité des systèmes informatiques. 
+			Son but est de fournir des informations sur les vulnérabilités de systèmes informatiques, 
+			d'aider à la pénétration et au développement de signatures pour les systèmes de détection d'intrusion Il possède aussi de nombreux outils comme msfvenom qui est une combinaison entre msfpayload et msfencode, cet outil sert a créer des bases ou des Trojan.
+
 		</div>
     </div>
 
