--- a/documentation/kali.html
+++ b/documentation/kali.html
@@ -83,7 +83,7 @@
 			Cet outil permet aux chercheurs et consultants en sécurité de montrer à quel point il serait facile d'accéder à distance à un système sans autorisation
 			<br>
 			<br>
-			Merasploit est en relation avec la sécurité des systèmes informatiques. 
+			Metasploit est en relation avec la sécurité des systèmes informatiques. 
 			Son but est de fournir des informations sur les vulnérabilités de systèmes informatiques, 
 			d'aider à la pénétration et au développement de signatures pour les systèmes de détection d'intrusion Il possède aussi de nombreux outils comme msfvenom qui est une combinaison entre msfpayload et msfencode, cet outil sert a créer des bases ou des Trojan.
 
