--- a/documentation/ddos.html
+++ b/documentation/ddos.html
@@ -41,26 +41,20 @@
 
     <div class="container">
         
-		<div class="title">Template - Title</div>
+		<div class="title">Les attaques DDOS</div>
 		<div class = "text">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-			Nunc suscipit lorem dolor, 
-			a aliquet odio placerat in. 
-			Maecenas dui ligula, congue consectetur ante id, 
-			finibus consequat tellus.
+			Une attaque distribuée par déni de service (Distribued Denial of Service) a pour but de rendre un serveur, un service ou une infrastructure indisponible. Pour empêcher le trafic légitime. Une attaque peut engendrer des pertes financières considérables.
 		</div>
 
-		<div class ="subtitle">Template Subtitle</div>
+		<div class ="subtitle">Comment ça marche ?</div>
 		<div class = "text">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-			Nunc suscipit lorem dolor, 
-			a aliquet odio placerat in. 
-			Maecenas dui ligula, congue consectetur ante id, 
-			finibus consequat tellus. 
-			Nunc feugiat elementum arcu.
+			Lors d'une attaque DDoS, une multitude de requêtes est envoyée en simultané depuis de multiples points du Web appelés "zombies". 
+			L'intensité de ce « tir croisé » rend le service instable, voire indisponible. 
+			Certains pirates informatiques se sont spécialisés dans la « levée » d’armées de « zombies », 
+			qu’ils peuvent ensuite louer à d’autres personnes ou groupes malveillants pour attaquer une cible particulière.
 		</div>
 
-		<div class ="subtitle">Template Subtitle</div>
+		<div class ="subtitle">Comment s'en protéger ?</div>
 		<div class ="text">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 			Nunc suscipit lorem dolor, 
